--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build:cjs": "tsc --module commonjs --outDir build/cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "build",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rcrespodev/ts-cqrs.git"
