--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p . --outDir build/esm",
     "build:cjs": "tsc --module commonjs --outDir build/cjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runTestsByPath ./tests/**/* --detectOpenHandles --forceExit"
   },
   "files": [
     "build",
@@ -28,6 +28,31 @@
   },
   "homepage": "https://github.com/rcrespodev/ts-cqrs#readme",
   "devDependencies": {
+    "@types/jest": "^29.0.3",
+    "@types/uuid": "^8.3.4",
+    "jest": "^29.1.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "rootDir": "./",
+    "modulePaths": [
+      "<rootDir>"
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testMatch": [
+      "**/tests/**/*.+(ts|tsx|js)"
+    ]
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
